# Avellaneda-Stoikov-Market-Making-Research-Platform

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt
cpp/include/mm/: analytics.hpp  avellaneda_stoikov.hpp  dashboard.hpp  fill_model.hpp  inventory.hpp  kappa_calibrator.hpp  latency_model.hpp  quote_engine.hpp  risk.hpp  simulator.hpp  strategy.hpp  volatility.hpp
cpp/tests/: CMakeLists.txt  test_analytics.cpp  test_avellaneda_stoikov.cpp  test_dashboard.cpp  test_fill_model.cpp  test_inventory.cpp  test_kappa_calibrator.cpp  test_latency_model.cpp  test_quote_engine.cpp  test_risk.cpp  test_simulator.cpp  test_strategy.cpp  test_volatility.cpp
cpp/tools/: mm_simulate_main.cpp
docs/: README.md  research.md
python/: analysis.py  compare_models.py  parameter_sweep.py  plots.py  requirements.txt  run_experiments.py
research/experiments/: gamma_0.05.csv  inv_aware.csv  inv_static.csv  vol_EWMA.csv  vol_Parkinson.csv  vol_Realized.csv  vol_RollingStd.csv
