include(GoogleTest)

add_executable(test_inventory test_inventory.cpp)
target_link_libraries(test_inventory PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_inventory)

add_executable(test_volatility test_volatility.cpp)
target_link_libraries(test_volatility PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_volatility)

add_executable(test_fill_model test_fill_model.cpp)
target_link_libraries(test_fill_model PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_fill_model)

add_executable(test_avellaneda_stoikov test_avellaneda_stoikov.cpp)
target_link_libraries(test_avellaneda_stoikov PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_avellaneda_stoikov)

add_executable(test_quote_engine test_quote_engine.cpp)
target_link_libraries(test_quote_engine PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_quote_engine)

add_executable(test_latency_model test_latency_model.cpp)
target_link_libraries(test_latency_model PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_latency_model)
