include(GoogleTest)

add_executable(test_inventory test_inventory.cpp)
target_link_libraries(test_inventory PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_inventory)

add_executable(test_volatility test_volatility.cpp)
target_link_libraries(test_volatility PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_volatility)

add_executable(test_fill_model test_fill_model.cpp)
target_link_libraries(test_fill_model PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_fill_model)

add_executable(test_avellaneda_stoikov test_avellaneda_stoikov.cpp)
target_link_libraries(test_avellaneda_stoikov PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_avellaneda_stoikov)

add_executable(test_quote_engine test_quote_engine.cpp)
target_link_libraries(test_quote_engine PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_quote_engine)

add_executable(test_latency_model test_latency_model.cpp)
target_link_libraries(test_latency_model PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_latency_model)

add_executable(test_risk test_risk.cpp)
target_link_libraries(test_risk PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_risk)

add_executable(test_strategy test_strategy.cpp)
target_link_libraries(test_strategy PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_strategy)

add_executable(test_simulator test_simulator.cpp)
target_link_libraries(test_simulator PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_simulator)

add_executable(test_analytics test_analytics.cpp)
target_link_libraries(test_analytics PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_analytics)

add_executable(test_dashboard test_dashboard.cpp)
target_link_libraries(test_dashboard PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_dashboard)

add_executable(test_kappa_calibrator test_kappa_calibrator.cpp)
target_link_libraries(test_kappa_calibrator PRIVATE mm_core hft_core gtest_main)
gtest_discover_tests(test_kappa_calibrator)
